# Click

./: COPYING  README.md  dev.uncognic.Click.json  meson.build
data/: dev.uncognic.Click.desktop.in  dev.uncognic.Click.gschema.xml  dev.uncognic.Click.metainfo.xml.in  dev.uncognic.Click.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: click-application.c  click-application.h  click-window.c  click-window.h  click-window.ui  click.gresource.xml  main.c  meson.build
